# redis-similarity

./: README.md
src/: CMakeLists.txt  a.out  remros.c  remros.h
src/config/: redis-6379.conf  redis-6380.conf  redis-6381.conf  sentinel-26379.conf  sentinel-26380.conf  sentinel-26381.conf
src/config/cluster/: addslot.sh  redis-7000.conf  redis-7001.conf  redis-7002.conf  redis-7003.conf  redis-7004.conf  redis-7005.conf
src/data/: dump-6379.rdb  dump-6380.rdb  dump-6381.rdb  dump-7000.rdb  dump-7001.rdb  dump-7002.rdb  dump-7003.rdb  dump-7004.rdb  dump-7005.rdb  node-7000.conf  node-7001.conf  node-7002.conf  node-7003.conf  node-7004.conf  node-7005.conf
src/data/Aof/: appendonly-6379.aof.5.incr.aof  appendonly-6379.aof.8.base.rdb  appendonly-6379.aof.manifest  appendonly-6380.aof.5.base.rdb  appendonly-6380.aof.5.incr.aof  appendonly-6380.aof.manifest  appendonly-6381.aof.3.base.rdb  appendonly-6381.aof.manifest
src/lua/: jaccardCluster.lua
src/mros/: mros.c  mros.h
